--- a/ME/CZX/JJTestTableViewCell.xib
+++ b/ME/CZX/JJTestTableViewCell.xib
@@ -14,46 +14,44 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WEU-9Y-wWz">
-                        <rect key="frame" x="5" y="5" width="100" height="80"/>
+                        <rect key="frame" x="5" y="5" width="120" height="80"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="0.82592054329999998" green="0.97599999999999998" blue="0.69994082069999997" alpha="1" colorSpace="calibratedRGB"/>
                     </imageView>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="CpersonNum" translatesAutoresizingMaskIntoConstraints="NO" id="aQR-FY-U2C">
-                        <rect key="frame" x="110" y="65" width="16" height="16"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    </imageView>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="yen" translatesAutoresizingMaskIntoConstraints="NO" id="dXA-Ec-0Ks">
-                        <rect key="frame" x="165" y="65" width="16" height="16"/>
+                        <rect key="frame" x="130" y="65" width="16" height="16"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     </imageView>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="110" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="khj-WZ-xSi">
-                        <rect key="frame" x="130" y="65" width="30" height="16"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="100" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lnf-Rs-ZQz">
-                        <rect key="frame" x="185" y="65" width="30" height="16"/>
+                        <rect key="frame" x="150" y="65" width="60" height="16"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="标题" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hvc-ga-ddz">
-                        <rect key="frame" x="110" y="5" width="180" height="30"/>
+                        <rect key="frame" x="130" y="5" width="150" height="20"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="介绍" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p1s-hk-ood">
+                        <rect key="frame" x="130" y="30" width="150" height="30"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
             </tableViewCellContentView>
             <connections>
+                <outlet property="detailLa" destination="p1s-hk-ood" id="Iz4-UB-ncL"/>
                 <outlet property="imgView" destination="WEU-9Y-wWz" id="Z3I-pP-gFo"/>
                 <outlet property="nameLabel" destination="hvc-ga-ddz" id="Xo8-Vn-AFI"/>
+                <outlet property="personNums" destination="khj-WZ-xSi" id="wnj-6j-Rkn"/>
             </connections>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="CpersonNum" width="30" height="30"/>
-        <image name="yen" width="30" height="30"/>
+        <image name="CpersonNum" width="20" height="20"/>
     </resources>
 </document>
