--- a/ME/ZHZ/个人中心/login/LoginViewController.xib
+++ b/ME/ZHZ/个人中心/login/LoginViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5056" systemVersion="14A261i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5056" systemVersion="14A283o" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
@@ -20,15 +20,23 @@
                 <userLayoutGuide location="64" affinity="minY"/>
             </userGuides>
             <subviews>
-                <textField appearanceType="aqua" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="密码" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1ea-TN-1Th">
-                    <rect key="frame" x="20" y="131" width="280" height="30"/>
+                <textField appearanceType="aqua" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="密码" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1ea-TN-1Th">
+                    <rect key="frame" x="20" y="120" width="280" height="30"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="280" id="O1T-HC-gG2"/>
+                        <constraint firstAttribute="height" constant="30" id="eYS-mv-72B"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
-                <textField appearanceType="aqua" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="账号/邮箱/E-mail" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="W5j-NZ-EZG">
-                    <rect key="frame" x="20" y="93" width="280" height="30"/>
+                <textField appearanceType="aqua" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="账号/手机号/E-mail" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="W5j-NZ-EZG">
+                    <rect key="frame" x="20" y="82" width="280" height="30"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="ghu-nl-0II"/>
+                        <constraint firstAttribute="width" constant="280" id="n6P-Ds-cxb"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
@@ -40,16 +48,24 @@
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                 </button>
-                <button appearanceType="aqua" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jr3-wG-r3d">
+                <button appearanceType="aqua" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jr3-wG-r3d">
                     <rect key="frame" x="20" y="202" width="100" height="30"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="100" id="Opi-ZP-TZp"/>
+                        <constraint firstAttribute="height" constant="30" id="RIr-pP-u0x"/>
+                    </constraints>
                     <state key="normal" title="注册" backgroundImage="Default.png">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                 </button>
-                <button appearanceType="aqua" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JDg-pE-MCN">
+                <button appearanceType="aqua" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JDg-pE-MCN">
                     <rect key="frame" x="200" y="202" width="100" height="30"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="S0x-ve-YFx"/>
+                        <constraint firstAttribute="width" constant="100" id="WVF-Ib-p9I"/>
+                    </constraints>
                     <state key="normal" title="登陆" backgroundImage="Default.png">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
@@ -59,6 +75,17 @@
                 </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="jr3-wG-r3d" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="5Wn-7x-8lx"/>
+                <constraint firstAttribute="centerX" secondItem="W5j-NZ-EZG" secondAttribute="centerX" id="6QM-UD-nrA"/>
+                <constraint firstItem="1ea-TN-1Th" firstAttribute="top" secondItem="W5j-NZ-EZG" secondAttribute="bottom" constant="8" id="FWb-7a-7M2"/>
+                <constraint firstItem="jr3-wG-r3d" firstAttribute="top" secondItem="1ea-TN-1Th" secondAttribute="bottom" constant="52" id="Ra4-ok-4El"/>
+                <constraint firstItem="W5j-NZ-EZG" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="82" id="bno-Ye-xuc"/>
+                <constraint firstAttribute="trailing" secondItem="JDg-pE-MCN" secondAttribute="trailing" constant="20" id="eSQ-ok-QLW"/>
+                <constraint firstItem="JDg-pE-MCN" firstAttribute="leading" secondItem="jr3-wG-r3d" secondAttribute="trailing" constant="80" id="sLh-om-F1z"/>
+                <constraint firstAttribute="centerX" secondItem="1ea-TN-1Th" secondAttribute="centerX" id="uHR-IU-fwz"/>
+                <constraint firstItem="JDg-pE-MCN" firstAttribute="top" secondItem="1ea-TN-1Th" secondAttribute="bottom" constant="52" id="y64-Sb-ILF"/>
+            </constraints>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
             <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
         </view>
